--- a/clusters/my-cluster/flux-system/kustomization.yaml
+++ b/clusters/my-cluster/flux-system/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
+- ../../../kustomize/base/backend/kustomization.yaml
+- ../../../kustomize/base/database/kustomization.yaml
+- ../../../kustomize/base/frontend/kustomization.yaml
