--- a/kustomize/base/backend/express-server.yaml
+++ b/kustomize/base/backend/express-server.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: express-server
-        image: team3acr.azurecr.io/express-server:v1
+        image: express-server
         ports:
         - containerPort: 3000
         volumeMounts:
