--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -1,23 +1,19 @@
 resources:
-- frontend/
+# - frontend/
 - backend/
-- database/
-- ingress/
-
-configMapGenerator:
-- literals:
-  - ASPNETCORE_ENVIRONMENT=Development
-  name: common-config
+# - database/
+# - ingress/
 
 images:
-- name: team3acr.azurecr.io/express-server
+- name: express-server
+  newName: team3acr.azurecr.io/express-server
   newTag: v1
-- name: team3acr.azurecr.io/flask-api
-  newTag: v1
-- name: nouchka/sqlite3
-  newTag: latest
-- name: team3acr.azurecr.io/angular-app
-  newTag: v1
+# - name: team3acr.azurecr.io/flask-api
+#   newTag: v1
+# - name: nouchka/sqlite3
+#   newTag: latest
+# - name: team3acr.azurecr.io/angular-app
+#   newTag: v1
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
